--- a/Radarr/docker-compose.yml
+++ b/Radarr/docker-compose.yml
@@ -1,1 +1,18 @@
+---
+version: "2.1"
+services:
+  radarr:
+    image: ghcr.io/linuxserver/radarr:latest
+    container_name: radarr
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/London
+    volumes:
+      - /opt/Radarr:/config
+      - /mnt/storage/Movies:/movies
+      - /mnt/storage/CurrentTorrents:/downloads
+    ports:
+      - 7878:7878
+    restart: unless-stopped
 
